feat: replace query handling with exposing beans directly